finsh boom boom

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="" onclick="sections1(); showSection('frizbi'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#ABB200]'); drinks('STAR/FRIZBI/APPLE & GRAPE 5.png');">
                         <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="STAR\LOGO\FRIZBI-2.png" alt="">
                     </li>
-                    <li class="" onclick="sections1(); showSection('boom2'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#D35910]'); drinks('STAR/منتجات BOOM BOOM/نكهة برتقال 5.png');">
+                    <li class="" onclick="sections1(); showSection('boom2'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#D35910]'); drinks('STAR/منتجات BOOM BOOM/نكهة برتقال 5.png'); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('STAR/boom boom/سائل_29.png');">
                         <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="star/LOGO/star-boom.png" alt="">
                     </li>
                     <li class="" onclick="sections1(); showSection('code'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#CE232D]'); drinks('STAR/CODE ROD/CODE ROD 2.png');">
@@ -68,11 +68,11 @@
             <div class="image w-[40%] group flex justify-center">
                 <img class="drinkImage w-[40%]  md:w-[20%]  2xl:w-[23%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
                     src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
-                <img class="liquidImage absolute w-0 group-hover:w-[40%] group-hover:md:w-[25%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[20.87deg] translate-y-[30%] -translate-x-[32%]"
-                    src="star\orange/orange-juice-splash.svg" alt="">
-                <img class="fruitImage absolute z-[8] w-0 group-hover:w-[30%] group-hover:md:w-[16%] translate-y-[37%] -translate-x-[20%] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[9.45deg]"
+                <img class="liquidImage absolute w-0 group-hover:w-[40%] group-hover:md:w-[25%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[20.87deg] translate-y-[30%] md:translate-y-[12%] -translate-x-[15%]"
+                    src="STAR/boom boom/سائل_29.png" alt="">
+                <img class="fruitImage absolute z-[8] w-0 group-hover:w-[35%] group-hover:md:w-[18%] translate-y-[37%] -translate-x-[20%] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[9.45deg]"
                     src="star\orange\orange-poster.svg" alt="">
-                <img class="sliceImage absolute w-0 group-hover:w-[30%] group-hover:md:w-[16%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[87%] -translate-x-[24%]"
+                <img class="sliceImage absolute w-0 group-hover:w-[35%] group-hover:md:w-[18%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[87%] -translate-x-[24%]"
                     src="star\orange/orange-ingredients-10.svg" alt="">
                 <img class="drinkImage absolute w-[4%] md:w-[2%] blur-[1px] rotate-[30deg]  z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[50%] translate-x-[650%]"
                     src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
@@ -378,7 +378,7 @@
                     <div class=" flex justify-center">
                         <div class="group relative w-20" >
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('Orange'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#D35910]')"
+                                onclick="changeText('Orange'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('STAR/boom boom/سائل_29.png');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#D35910]')"
                                 src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
@@ -388,7 +388,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('Apple'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('STAR/Cartoons/55.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#94D12B]')" src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
+                                onclick="changeText('Apple'); drinks(this.src); fruits('STAR/boom boom/تفاح كبير_22.png'); slices('STAR/boom boom/تفاح صغير.png'); liquids('STAR/boom boom/سائل_23.png');  boxs('STAR/Cartoons/55.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#94D12B]')" src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -397,7 +397,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('Lemon'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('STAR/Cartoons/6.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#FFFF12]')" src="STAR\منتجات BOOM BOOM\بنكهة الليمون 7.png" alt="">
+                                onclick="changeText('Lemon'); drinks(this.src); fruits('STAR/boom boom/ليمون_8.png'); slices('STAR/boom boom/ليمون صغير.png'); liquids('STAR/boom boom/سائل_33.png');  boxs('STAR/Cartoons/6.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#FFFF12]')" src="STAR\منتجات BOOM BOOM\بنكهة الليمون 7.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\منتجات BOOM BOOM\بنكهة الليمون 7.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -406,7 +406,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('Mango'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('STAR/Cartoons/7.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#FAD50B]')" src="STAR\منتجات BOOM BOOM\بنكهة المانجو 5.png" alt="">
+                                onclick="changeText('Mango'); drinks(this.src); fruits('STAR/boom boom/مانجو كبير_14.png'); slices('STAR/boom boom/مانجو صغير.png'); liquids('STAR/boom boom/سائل_12.png');  boxs('STAR/Cartoons/7.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#FAD50B]')" src="STAR\منتجات BOOM BOOM\بنكهة المانجو 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\منتجات BOOM BOOM\بنكهة المانجو 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -415,7 +415,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('Berry'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#681773]')" src="STAR\منتجات BOOM BOOM\توت اسود 5.png" alt="">
+                                onclick="changeText('Berry'); drinks(this.src); fruits('STAR/boom boom/توت كبيرة_25.png'); slices('STAR/boom boom/توت صغير_24.png'); liquids('STAR/boom boom/سائل_26.png');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#681773]')" src="STAR\منتجات BOOM BOOM\توت اسود 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\منتجات BOOM BOOM\توت اسود 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -424,7 +424,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('Tropical'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('STAR/Cartoons/4.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#681773]')" src="STAR\منتجات BOOM BOOM\فواكة استوائية 5.png" alt="">
+                                onclick="changeText('Tropical'); drinks(this.src); fruits('STAR/boom boom/مانجو كبير_14.png'); slices('STAR/boom boom/12_11zon.png'); liquids('STAR/boom boom/سائل_39.png');  boxs('STAR/Cartoons/4.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#681773]')" src="STAR\منتجات BOOM BOOM\فواكة استوائية 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\منتجات BOOM BOOM\فواكة استوائية 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -433,7 +433,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('Strawberry'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('STAR/Cartoons/3.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#EF0E54]')" src="STAR\منتجات BOOM BOOM\نكهة فراولة 5.png" alt="">
+                                onclick="changeText('Strawberry'); drinks(this.src); fruits('STAR/boom boom/فراولة_10.png'); slices('STAR/boom boom/فريز صغير.png'); liquids('STAR/boom boom/سائل_9.png');  boxs('STAR/Cartoons/3.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#EF0E54]')" src="STAR\منتجات BOOM BOOM\نكهة فراولة 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\منتجات BOOM BOOM\نكهة فراولة 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -442,7 +442,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('Fruits'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#A03EA5]')" src="STAR\منتجات BOOM BOOM\نكهة فواكة 5.png" alt="">
+                                onclick="changeText('Fruits'); drinks(this.src); fruits('STAR/boom boom/اناناس كبير_16.png'); slices('STAR/boom boom/برتقال.png'); liquids('STAR/boom boom/سائل_39.png');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#A03EA5]')" src="STAR\منتجات BOOM BOOM\نكهة فواكة 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\منتجات BOOM BOOM\نكهة فواكة 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
