--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="" onclick="sections1(); showSection('frizbi'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#ABB200]'); drinks('STAR/FRIZBI/APPLE & GRAPE 5.png');">
                         <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="STAR\LOGO\FRIZBI-2.png" alt="">
                     </li>
-                    <li class="" onclick="sections1(); showSection('boom2'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#D35910]'); drinks('STAR/منتجات BOOM BOOM/نكهة برتقال 5.png'); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('STAR/boom boom/سائل_29.png');">
+                    <li class="" onclick="sections1(); showSection('boom2'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#D35910]'); drinks('STAR/منتجات BOOM BOOM/orange_n 1.png'); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('STAR/boom boom/سائل_29.png');">
                         <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="star/LOGO/star-boom.png" alt="">
                     </li>
                     <li class="" onclick="sections1(); showSection('code'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#CE232D]'); drinks('STAR/CODE ROD/CODE ROD 2.png');">
@@ -67,7 +67,7 @@
             </div>
             <div class="image w-[40%] group flex justify-center">
                 <img class="drinkImage w-[40%]  md:w-[20%]  2xl:w-[23%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
-                    src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
+                    src="STAR/منتجات BOOM BOOM/orange_n 1.png" alt="">
                 <img class="liquidImage absolute w-0 group-hover:w-[40%] group-hover:md:w-[25%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[20.87deg] translate-y-[30%] md:translate-y-[12%] -translate-x-[15%]"
                     src="STAR/boom boom/سائل_29.png" alt="">
                 <img class="fruitImage absolute z-[8] w-0 group-hover:w-[35%] group-hover:md:w-[18%] translate-y-[37%] -translate-x-[20%] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[9.45deg]"
@@ -75,9 +75,9 @@
                 <img class="sliceImage absolute w-0 group-hover:w-[35%] group-hover:md:w-[18%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[87%] -translate-x-[24%]"
                     src="star\orange/orange-ingredients-10.svg" alt="">
                 <img class="drinkImage absolute w-[4%] md:w-[2%] blur-[1px] rotate-[30deg]  z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[50%] translate-x-[650%]"
-                    src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
+                    src="STAR/منتجات BOOM BOOM/orange_n 1.png" alt="">
                 <img class="drinkImage absolute w-[2%] md:w-[1%] blur-[1px] -rotate-[30deg] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[110%] -translate-x-[900%]"
-                    src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
+                    src="STAR/منتجات BOOM BOOM/orange_n 1.png" alt="">
             </div>
             <div dir="ltr" class="text text-white w-[20%] m-auto">
                 <img class="logoImage my-[10%]" src="star/LOGO/star-boom-1.png" alt="">
@@ -379,11 +379,11 @@
                         <div class="group relative w-20" >
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
                                 onclick="changeText('Orange'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('STAR/boom boom/سائل_29.png');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#D35910]')"
-                                src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
+                                src="STAR/منتجات BOOM BOOM/orange_n 1.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                                src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
+                                src="STAR/منتجات BOOM BOOM/orange_n 1.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                                src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
+                                src="STAR/منتجات BOOM BOOM/orange_n 1.png" alt="">
                             <h2 class="group-hover:text-[#D35910] text-white text-[6px] lg:text-sm">Orange</h2>
                         </div>
                         <div class="group relative w-20">
