--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             class="overflow-x-auto z-10 h-full absolute px-1 md:px-4 flex flex-col justify-between transition duration-300">
             <div class="m-auto overflow-x-hidden h-[40%] lg:h-[70%] sb">
                 <ul class="tracking-wide leading-5 text-sm font-normal">
-                    <li class="" onclick="sections1(); showSection('frizbi'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#ABB200]'); drinks('STAR/FRIZBI/APPLE & GRAPE 5.png');">
+                    <li class="" onclick="sections1(); showSection('frizbi'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#ABB200]'); drinks('STAR/FRIZBI/APPLE & GRAPE 5.png'); fruits('STAR/boom boom/تفاح كبير_22.png'); slices('STAR/firizbi-in/grapes-isolated-on-transparent-background-grape-clip-art-generative-ai-png 1.png'); liquids('STAR/firizbi-in/a-s.png');">
                         <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="STAR\LOGO\FRIZBI-2.png" alt="">
                     </li>
                     <li class="" onclick="sections1(); showSection('boom2'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#D35910]'); drinks('STAR/منتجات BOOM BOOM/orange_n 1.png'); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('STAR/boom boom/سائل_29.png');">
@@ -110,11 +110,11 @@
                 <img class="drinkImage w-[40%]  md:w-[20%]  2xl:w-[23%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
                     src="STAR\FRIZBI\APPLE & GRAPE 5.png" alt="">
                 <img class="liquidImage absolute w-0 group-hover:w-[40%] group-hover:md:w-[25%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[20.87deg] translate-y-[30%] -translate-x-[32%]"
-                    src="star\orange/orange-juice-splash.svg" alt="">
+                    src="STAR/firizbi-in/a-s.png" alt="">
                 <img class="fruitImage absolute z-[8] w-0 group-hover:w-[30%] group-hover:md:w-[16%] translate-y-[37%] -translate-x-[20%] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[9.45deg]"
-                    src="star\orange\orange-poster.svg" alt="">
+                    src="STAR/boom boom/تفاح كبير_22.png" alt="">
                 <img class="sliceImage absolute w-0 group-hover:w-[30%] group-hover:md:w-[16%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[87%] -translate-x-[24%]"
-                    src="star\orange/orange-ingredients-10.svg" alt="">
+                    src="STAR/firizbi-in/grapes-isolated-on-transparent-background-grape-clip-art-generative-ai-png 1.png" alt="">
                 <img class="drinkImage absolute w-[4%] md:w-[2%] blur-[1px] rotate-[30deg]  z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[50%] translate-x-[650%]"
                     src="STAR\FRIZBI\APPLE & GRAPE 5.png" alt="">
                 <img class="drinkImage absolute w-[2%] md:w-[1%] blur-[1px] -rotate-[30deg] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[110%] -translate-x-[900%]"
@@ -461,7 +461,7 @@
                     <div class=" flex justify-center">
                         <div class="group relative w-20" >
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('APPLE & GRAPE'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#ABB200]')"
+                                onclick="changeText('APPLE & GRAPE'); drinks(this.src); fruits('STAR/boom boom/تفاح كبير_22.png'); slices('STAR/firizbi-in/grapes-isolated-on-transparent-background-grape-clip-art-generative-ai-png 1.png'); liquids('STAR/firizbi-in/a-s.png');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#ABB200]')"
                                 src="STAR\FRIZBI\APPLE & GRAPE 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\APPLE & GRAPE 5.png" alt="">
@@ -471,7 +471,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('BERRY MIX '); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('STAR/Cartoons/5_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#6A0066]')" src="STAR\FRIZBI\BERRY MIX 4.png" alt="">
+                                onclick="changeText('BERRY MIX '); drinks(this.src); fruits('STAR/boom boom/توت كبيرة_25.png'); slices('STAR/boom boom/توت صغير_24.png'); liquids('STAR/firizbi-in/33.png');  boxs('STAR/Cartoons/5_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#6A0066]')" src="STAR\FRIZBI\BERRY MIX 4.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\BERRY MIX 4.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -480,7 +480,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('BLUEBERRY'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#18346A]')" src="STAR\FRIZBI\BLUE HAWAI BLUEBERRY 5.png" alt="">
+                                onclick="changeText('BLUEBERRY'); drinks(this.src); fruits('STAR/boom boom/توت كبيرة_25.png'); slices('STAR/boom boom/توت صغير_24.png'); liquids('STAR/firizbi-in/465.png');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#18346A]')" src="STAR\FRIZBI\BLUE HAWAI BLUEBERRY 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\BLUE HAWAI BLUEBERRY 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -489,7 +489,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('STRAWBERRY'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#9D2371]')" src="STAR\FRIZBI\STRAWBERRY MIX 8.png" alt="">
+                                onclick="changeText('STRAWBERRY'); drinks(this.src); fruits('STAR/boom boom/فراولة_10.png'); slices('STAR/boom boom/فريز صغير.png'); liquids('STAR/firizbi-in/2123.png');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#9D2371]')" src="STAR\FRIZBI\STRAWBERRY MIX 8.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\STRAWBERRY MIX 8.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -498,7 +498,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('LEMON & MINT'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('STAR/Cartoons/8_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#007767]')" src="STAR\FRIZBI\LEMON & MINT 5.png" alt="">
+                                onclick="changeText('LEMON & MINT'); drinks(this.src); fruits('STAR/boom boom/ليمون_8.png'); slices('STAR/boom boom/ليمون صغير.png'); liquids('STAR/firizbi-in/23335.png');  boxs('STAR/Cartoons/8_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#007767]')" src="STAR\FRIZBI\LEMON & MINT 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\LEMON & MINT 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -516,7 +516,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('MANGO & PEACH'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('STAR/Cartoons/1_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#B98A00]')" src="STAR\FRIZBI\MANGO & PEACH 3.png" alt="">
+                                onclick="changeText('MANGO & PEACH'); drinks(this.src); fruits('STAR/boom boom/مانجو كبير_14.png'); slices('STAR/boom boom/مانجو صغير.png'); liquids('STAR/firizbi-in/875847.png');  boxs('STAR/Cartoons/1_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#B98A00]')" src="STAR\FRIZBI\MANGO & PEACH 3.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\MANGO & PEACH 3.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -525,7 +525,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('PASSION & FRUIT'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('STAR/Cartoons/3_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#AC5241]')" src="STAR\FRIZBI\PASSION & FRUIT 3.png" alt="">
+                                onclick="changeText('PASSION & FRUIT'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('STAR/boom boom/12_11zon.png'); liquids('STAR/firizbi-in/8464856+.png');  boxs('STAR/Cartoons/3_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#AC5241]')" src="STAR\FRIZBI\PASSION & FRUIT 3.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\PASSION & FRUIT 3.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -534,7 +534,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('POMEGRANATE MIX'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('STAR/Cartoons/6_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#9F0000]')" src="STAR\FRIZBI\POMEGRANATE MIX 3.png" alt="">
+                                onclick="changeText('POMEGRANATE MIX'); drinks(this.src); fruits('STAR/boom boom/رمان كبير_31.png'); slices('STAR/firizbi-in/kisspng-pomegranate-juice-fruit-stock-photography-food-pomegranate-5ab4aa73ac4754.png'); liquids('STAR/firizbi-in/58479876.png');  boxs('STAR/Cartoons/6_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#9F0000]')" src="STAR\FRIZBI\POMEGRANATE MIX 3.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\POMEGRANATE MIX 3.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
